tests/cases/conformance/decorators/invalid/decoratorOnFunctionExpression.ts
declare function dec<T>(target: T): T;

var F = @dec function () {
}